Implementacion de vista de landing page

--- a/src/app/public/pages/landing/landing.component.html
+++ b/src/app/public/pages/landing/landing.component.html
@@ -1,4 +1,55 @@
 <app-navbar></app-navbar>
-<div class="main">
-awdfew
+<div class="container-fluid main">
+
+	<div class="row align-items-center">
+		<div class="col-sm-12 col-md-6 col-lg-4 pb-3 spinner">
+			<img src="assets/Spinner.png">
+		</div>
+		<div class="col-sm-12 col-md-6 col-lg-3 pb-3 bigText text-center">
+			<fa-icon [icon]="faChevronRight"></fa-icon> Codeverse
+		</div>
+		<div class="col-sm-12 col-md-12 col-lg-5 pb-3 text-center">
+
+			<div class="column">
+				<div class="description bigText">
+					<p>Desarrolla</p>
+					<p>Colabora</p>
+					<p>Comparte</p>
+				</div>
+				<hr>
+				<div class="buttons">
+					<button type="button" class="btn btn-principal">Inicia Sesión</button>
+					<div>¿No tienes cuenta?</div>
+					<button type="button" class="btn btn-principal">Registrate</button>
+				</div>
+			</div>
+
+		</div>
+	</div>
+	<!-- <div class="row align-items-center section">
+		<div class="col-sm-12 col-md-6 col-lg-4 pb-3">
+
+			kjasdbjlfjbldaslbiasdlibadsfbildsaf
+		</div>
+		<div class="col-sm-12 col-md-6 col-lg-3 pb-3 bigText text-center">
+			<fa-icon [icon]="faChevronRight"></fa-icon> Codeverse
+		</div>
+		<div class="col-sm-12 col-md-12 col-lg-5 pb-3 text-center">
+
+			<div class="column">
+				<div class="description bigText">
+					<p>Desarrolla</p>
+					<p>Colabora</p>
+					<p>Comparte</p>
+				</div>
+				<hr>
+				<div class="buttons">
+					<button type="button" class="btn btn-principal">Inicia Sesión</button>
+					<div>¿No tienes cuenta?</div>
+					<button type="button" class="btn btn-principal">Registrate</button>
+				</div>
+			</div>
+
+		</div>
+	</div>-->
 </div>
