--- a/src/app/public/pages/landing/landing.component.css
+++ b/src/app/public/pages/landing/landing.component.css
@@ -1,3 +1,59 @@
-.main{
-  background-color: white;
+app-navbar {
+	position: fixed;
+	width: 100%;
+	top: 0;
+	left: 0;
+	flex: 0
+}
+
+.main {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+
+	overflow-y: auto;
+	margin-top: 3.5em;
+	padding: 2.5em;
+	width: 100%;
+	top: 10%;
+}
+
+.spinner {
+	padding: 0.5rem;
+}
+
+img {
+	max-width: 100%;
+	animation: rotate 20s infinite linear;
+}
+
+@keyframes rotate {
+	from {
+		transform: rotate(0deg);
+	}
+
+	to {
+		transform: rotate(360deg);
+	}
+}
+
+.bigText {
+	font-size: 2.5em;
+}
+
+.btn-principal {
+	background-color: #0B132B;
+	color: white;
+}
+
+.description {
+	margin: 4rem;
+}
+
+.buttons {
+	margin: 4rem;
+}
+
+.buttons>button {
+	margin: 1rem;
 }
