--- a/src/app/public/pages/landing/landing.component.html
+++ b/src/app/public/pages/landing/landing.component.html
@@ -1,55 +1,60 @@
 <app-navbar></app-navbar>
-<div class="container-fluid main">
 
-	<div class="row align-items-center">
-		<div class="col-sm-12 col-md-6 col-lg-4 pb-3 spinner">
-			<img src="assets/Spinner.png">
-		</div>
-		<div class="col-sm-12 col-md-6 col-lg-3 pb-3 bigText text-center">
-			<fa-icon [icon]="faChevronRight"></fa-icon> Codeverse
-		</div>
-		<div class="col-sm-12 col-md-12 col-lg-5 pb-3 text-center">
+<div class="scrollspy p-3 rounded-2 vh-100" data-bs-spy="scroll" data-bs-target="#navbar"
+	data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" tabindex="0">
 
-			<div class="column">
-				<div class="description bigText">
-					<p>Desarrolla</p>
-					<p>Colabora</p>
-					<p>Comparte</p>
-				</div>
-				<hr>
-				<div class="buttons">
-					<button type="button" class="btn btn-principal">Inicia Sesión</button>
-					<div>¿No tienes cuenta?</div>
-					<button type="button" class="btn btn-principal">Registrate</button>
+
+	<div class="main">
+		<div class="row align-items-center h-100">
+			<div class="col-sm-12 col-md-6 col-lg-4 pb-3 spinner d-flex justify-content-center">
+				<img src="assets/Spinner.png">
+			</div>
+			<div class="col-sm-12 col-md-6 col-lg-3 pb-3 bigText text-center">
+				<fa-icon [icon]="faChevronRight"></fa-icon> Codeverse
+			</div>
+			<div class="col-sm-12 col-md-12 col-lg-5 pb-3 text-center">
+
+				<div class="column">
+					<div class="description bigText">
+						<p>Desarrolla</p>
+						<p>Colabora</p>
+						<p>Comparte</p>
+					</div>
+					<hr>
+					<div class="buttons">
+						<button type="button" class="btn btn-principal">Inicia Sesión</button>
+						<div>¿No tienes cuenta?</div>
+						<button type="button" class="btn btn-principal">Registrate</button>
+					</div>
 				</div>
 			</div>
-
 		</div>
+
+		<div class="row align-items-center h-100">
+			<div class="col-sm-12 col-md-6 col-lg-4 pb-3 spinner d-flex justify-content-center">
+				<img src="assets/Spinner.png">
+			</div>
+			<div class="col-sm-12 col-md-6 col-lg-3 pb-3 bigText text-center">
+				<fa-icon [icon]="faChevronRight"></fa-icon> Codeverse
+			</div>
+			<div class="col-sm-12 col-md-12 col-lg-5 pb-3 text-center">
+
+				<div class="column">
+					<div class="description bigText">
+						<p>Desarrolla</p>
+						<p>Colabora</p>
+						<p>Comparte</p>
+					</div>
+					<hr>
+					<div class="buttons">
+						<button type="button" class="btn btn-principal">Inicia Sesión</button>
+						<div>¿No tienes cuenta?</div>
+						<button type="button" class="btn btn-principal">Registrate</button>
+					</div>
+				</div>
+			</div>
+		</div>
+
 	</div>
-	<!-- <div class="row align-items-center section">
-		<div class="col-sm-12 col-md-6 col-lg-4 pb-3">
 
-			kjasdbjlfjbldaslbiasdlibadsfbildsaf
-		</div>
-		<div class="col-sm-12 col-md-6 col-lg-3 pb-3 bigText text-center">
-			<fa-icon [icon]="faChevronRight"></fa-icon> Codeverse
-		</div>
-		<div class="col-sm-12 col-md-12 col-lg-5 pb-3 text-center">
-
-			<div class="column">
-				<div class="description bigText">
-					<p>Desarrolla</p>
-					<p>Colabora</p>
-					<p>Comparte</p>
-				</div>
-				<hr>
-				<div class="buttons">
-					<button type="button" class="btn btn-principal">Inicia Sesión</button>
-					<div>¿No tienes cuenta?</div>
-					<button type="button" class="btn btn-principal">Registrate</button>
-				</div>
-			</div>
-
-		</div>
-	</div>-->
 </div>
