--- a/src/app/public/pages/landing/landing.component.html
+++ b/src/app/public/pages/landing/landing.component.html
@@ -30,7 +30,7 @@
 			</div>
 		</div>
 
-		<div class="row align-items-center h-100">
+		<!-- <div class="row align-items-center h-100" id="secondSection">
 			<div class="col-sm-12 col-md-6 col-lg-4 pb-3 spinner d-flex justify-content-center">
 				<img src="assets/Spinner.png">
 			</div>
@@ -53,7 +53,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 
 	</div>
 
