--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -9,9 +9,9 @@
 		</button>
 
 		<div [ngbCollapse]="isCollapsed" class="collapse navbar-collapse">
-			<ul class="navbar-nav">
-				<li class="nav-item active">
-					<a class="nav-link" [routerLink]="'.'" (click)="isCollapsed = true">Features</a>
+			<ul class="nav nav-pills">
+				<li class="nav-item">
+					<a class="nav-link" href="#secondSection" (click)="isCollapsed = true">Features</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" [routerLink]="'.'" (click)="isCollapsed = true">Examples</a>
