--- a/src/app/public/pages/landing/landing.component.css
+++ b/src/app/public/pages/landing/landing.component.css
@@ -2,10 +2,18 @@
 	height: 100%;
 }
 
-/* .main>div {
-	margin-top: 1rem;
-	padding: 1rem;
-} */
+.main {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	padding-left: 1rem;
+	padding-right: 1rem;
+}
+
+.main > div{
+	padding-top: 10%;
+	padding-bottom: 10%;
+}
 
 .spinner {
 	padding: 0.5rem;
@@ -41,16 +49,20 @@ img {
 }
 
 .description {
-	margin: 4rem;
+	/* margin: 4rem; */
 }
 
 .buttons>button {
 	margin: 1rem;
 }
 
-#secondSection {
+#secondSection{
+	padding-left: 5%;
+	padding-right: 5%;
+}
 
-	background-color: f1f1f1;
+p{
+	margin: 0;
 }
 
 .whiteText {
@@ -62,7 +74,6 @@ img {
 	flex-direction: column;
 	justify-content: space-around;
 	align-items: center;
-	height: 30%;
 	padding: 1rem;
 	height: 40vh;
 	border-style: solid;
@@ -78,7 +89,7 @@ img {
 	font-weight: bold;
 }
 
-.icon {
+/* .icon {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -88,7 +99,7 @@ img {
 	border-radius: 50%;
 	background-color: #3A506B;
 	color: #f1f1f1;
-}
+} */
 
 hr {
 	width: 100%;
