--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark mb-3">
+<nav class="navbar navbar-expand-md navbar-dark">
 	<div class="container-fluid">
 		<a class="navbar-brand" [routerLink]="'.'">
 			<img src="assets/Marca White.png">
