Se agregó texto de descripción

--- a/src/app/public/pages/landing/landing.component.html
+++ b/src/app/public/pages/landing/landing.component.html
@@ -44,6 +44,8 @@
 
 			<div class="col-sm-12 col-md-12 col-lg-12 pb-5">
 				<p class="bigText text-center">Descubre Codeverse</p>
+				<p class="pt-5">La capa gratuita está muy bien pero revisa nuestros planes y disfruta de toda la
+					experiencia que te brinda Coderverse.</p>
 			</div>
 
 			<div class="col-sm-12 col-md-4 col-lg-4 pb-3">
@@ -76,7 +78,7 @@
 						</ul>
 					</div>
 					<div class="footer">
-						<button class="btn btn-principal">Actualizate</button>
+						<button class="btn btn-principal">Actualiza</button>
 					</div>
 				</div>
 			</div>
@@ -94,7 +96,7 @@
 						</ul>
 					</div>
 					<div class="footer">
-						<button class="btn btn-principal">Actualizate</button>
+						<button class="btn btn-principal">Actualiza</button>
 					</div>
 
 				</div>
