Correción en los item del nabar

--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -9,7 +9,7 @@
 		</button>
 
 		<div [ngbCollapse]="isCollapsed" class="collapse navbar-collapse">
-			<ul class="nav nav-pills">
+			<ul class="navbar-nav nav-pills">
 				<li class="nav-item">
 					<a class="nav-link" href="#secondSection" (click)="isCollapsed = true">Features</a>
 				</li>
