--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -11,13 +11,13 @@
 		<div [ngbCollapse]="isCollapsed" class="collapse navbar-collapse">
 			<ul class="navbar-nav nav-pills">
 				<li class="nav-item">
-					<a class="nav-link" href="#secondSection" (click)="isCollapsed = true">Features</a>
+					<a class="nav-link" href="#secondSection" (click)="isCollapsed = true">Planes</a>
 				</li>
-				<li class="nav-item">
+				<!-- <li class="nav-item">
 					<a class="nav-link" [routerLink]="'.'" (click)="isCollapsed = true">Examples</a>
-				</li>
+				</li> -->
 				<li class="nav-item">
-					<a class="nav-link" [routerLink]="'.'" (click)="isCollapsed = true">About</a>
+					<a class="nav-link" [routerLink]="'.'" (click)="isCollapsed = true">Acerca de nosotros</a>
 				</li>
 			</ul>
 		</div>
