--- a/src/app/public/pages/landing/landing.component.html
+++ b/src/app/public/pages/landing/landing.component.html
@@ -32,9 +32,9 @@
 				</div>
 				<hr>
 				<div class="buttons">
-					<button type="button" class="btn btn-principal">Inicia Sesión</button>
+					<button type="button" class="btn btn-principal" routerLink="/auth/login">Inicia Sesión</button>
 					<div>¿No tienes cuenta?</div>
-					<button type="button" class="btn btn-principal">Registrate</button>
+					<button type="button" class="btn btn-principal" routerLink="/auth/register">Registrate</button>
 				</div>
 			</div>
 
