--- a/src/app/auth/pages/register/register.component.html
+++ b/src/app/auth/pages/register/register.component.html
@@ -1,1 +1,100 @@
-<p>register works!</p>
+<app-navbar></app-navbar>
+
+<div class="scrollspy rounded-2 vh-100" data-bs-spy="scroll" data-bs-target="#navbar"
+	data-bs-root-margin="0px 0px 0px 0px" data-bs-smooth-scroll="true" tabindex="0">
+
+	<div class="main">
+
+		<div class="row align-items-center h-100 ps-5 pe-5">
+			<div class="col-sm-12 col-md-6 col-lg-6 spinner d-flex justify-content-center">
+				<img src="assets/Spinner.png">
+			</div>
+
+			<div class="col-sm-12 col-md-6 col-lg-6">
+
+				<div class="row d-flex align-items-center">
+
+					<div class="col-sm-12 col-md-12 col-lg-6">
+						<p class="bigText textCenter">¡Bienvenido a Codeverse!</p>
+						<p>Registrate en la plataforma #1 de desarrollo web</p>
+					</div>
+
+					<div class="col-sm-12 col-md-12 col-lg-6">
+
+						<div class="customCard">
+							<div class="body">
+
+								<div class="mb-4">
+									<label for="firtsNameInput" class="form-label">Nombres</label>
+									<input type="text" class="form-control" id="firtsNameInput"
+										aria-describedby="nameHelp" placeholder="Juan Antonio">
+									<!-- <div id="emailHelp" class="form-text">
+										</div> -->
+								</div>
+
+								<div class="mb-4">
+									<label for="lastNameInput" class="form-label">Apellidos</label>
+									<input type="text" class="form-control" id="lastNameInput"
+										aria-describedby="lastNameHelp" placeholder="Martínez Muñoz">
+								</div>
+
+								<!-- <div class="mb-4">
+									<label for="exampleInputPassword1" class="form-label">Fecha de
+										Nacimiento</label>
+
+									<ngb-datepicker #dp [(ngModel)]="model"
+										(navigate)="date = $event.next"></ngb-datepicker>
+								</div> -->
+
+								<div class="mb-4">
+									<label for="emailInput" class="form-label">Correo Electrónico</label>
+									<input type="email" class="form-control" id="emailInput"
+										placeholder="correo@proveedor.com">
+								</div>
+
+								<div class="mb-4">
+									<label for="passwordInput" class="form-label">Contraseña</label>
+									<input type="password" class="form-control" id="passwordInput"
+										placeholder="Min 4, Max 35 carácteres">
+								</div>
+
+								<div class="mb-4">
+									<label for="passwordConfirmInput" class="form-label">Confirme su
+										Contraseña</label>
+									<input type="password" class="form-control" id="passwordConfirmInput"
+										placeholder="Min 4, Max 35 carácteres">
+								</div>
+
+							</div>
+
+							<div class="row">
+								<div class="col-sm-12 col-md-12 col-lg-6">
+									<button type="button" class="btn btn-principal"
+										routerLink="/app/home">Registrarme</button>
+								</div>
+
+								<div class="col-sm-12 col-md-12 col-lg-6">
+									<button type="button" class="btn btn-facebook" routerLink="/auth/login">
+										<fa-icon [icon]="faFacebook"></fa-icon>Registrarme</button>
+								</div>
+
+								<div class="col-sm-12 col-md-12 col-lg-12">
+									<hr>
+									<p class="fw-light">¿Ya tienes cuenta?</p>
+									<button type="button" class="btn btn-principal" routerLink="/auth/login">Inicia
+										Sesión</button>
+								</div>
+
+							</div>
+
+						</div>
+
+					</div>
+
+				</div>
+
+			</div>
+		</div>
+
+	</div>
+</div>
