--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar sticky-top navbar-expand-md navbar-dark">
 	<div class="container-fluid">
-		<a class="navbar-brand" [routerLink]="'.'">
+		<a class="navbar-brand" routerLink="/">
 			<img src="assets/Marca White.png">
 		</a>
 
