--- a/src/app/codeverse/pages/project-explorer/project-explorer.component.html
+++ b/src/app/codeverse/pages/project-explorer/project-explorer.component.html
@@ -1,5 +1,31 @@
 <app-navbar></app-navbar>
 
-<div>
+<div class="main">
+
+	<div class="row">
+
+		<div class="col-sm-12 col-md-4 col-lg-3">
+
+			<div class="sideBar">
+
+
+				<fa-icon [icon]="faFolderPlus"></fa-icon>Create new Project
+
+
+			</div>
+
+		</div>
+
+		<div class="col-sm-12 col-md-8 col-lg-9">
+
+			<div class="folderContent">
+
+				adsasdgasd
+
+			</div>
+
+		</div>
+
+	</div>
 
 </div>
