--- a/src/app/codeverse/pages/project-explorer/project-explorer.component.html
+++ b/src/app/codeverse/pages/project-explorer/project-explorer.component.html
@@ -2,27 +2,66 @@
 
 <div class="main">
 
-	<div class="row">
+	<div class="col-sm-12 col-md-4 col-lg-3 bg-custom2 d-flex align-items-center pe-3 ps-3">
 
-		<div class="col-sm-12 col-md-4 col-lg-3">
+		<div class="sideBar">
 
-			<div class="sideBar">
-
-
-				<fa-icon [icon]="faFolderPlus"></fa-icon>Create new Project
-
-
-			</div>
+			<button class="btn">
+				<fa-icon [icon]="faFolderPlus"></fa-icon>Proyecto Nuevo
+			</button>
+			<button class="btn">
+				<fa-icon [icon]="faFolderTree"></fa-icon>Carpetas
+			</button>
+			<button class="btn">
+				<fa-icon [icon]="faStar"></fa-icon>Favoritos
+			</button>
+			<button class="btn">
+				<fa-icon [icon]="faShareNodes"></fa-icon>Proyectos Compartidos
+			</button>
 
 		</div>
 
-		<div class="col-sm-12 col-md-8 col-lg-9">
+	</div>
 
-			<div class="folderContent">
+	<div class="col-sm-12 col-md-8 col-lg-9 bg-custom1 pe-3 ps-3">
 
-				adsasdgasd
+		<div class="header">
+			<h1>Explorador de Archivos</h1>
+		</div>
+		<hr>
+		<div class="folderContent">
 
-			</div>
+			<table class="table table-light table-bordered table-striped table-hover">
+				<thead>
+					<tr>
+						<th>#</th>
+						<th>Nombre</th>
+						<th>Detalles</th>
+						<th>Tipo</th>
+						<th>Creado</th>
+						<th>Modificado</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<th>1</th>
+						<th>Angular</th>
+						<th>1 carpeta, 2 proyectos</th>
+						<th>Carpeta</th>
+						<th>28/7/23 12:00 pm</th>
+						<th>30/7/23 7:00 pm</th>
+					</tr>
+					<tr>
+						<th>2</th>
+						<th>Angular</th>
+						<th>1 carpeta, 2 proyectos</th>
+						<th>Carpeta</th>
+						<th>28/7/23 12:00 pm</th>
+						<th>30/7/23 7:00 pm</th>
+					</tr>
+				</tbody>
+
+			</table>
 
 		</div>
 
