--- a/src/app/codeverse/pages/project-explorer/project-explorer.component.css
+++ b/src/app/codeverse/pages/project-explorer/project-explorer.component.css
@@ -1,24 +1,20 @@
-/* .main {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	padding-top: 5%;
-	padding-bottom: 5%;
-	padding-left: 1%;
-	padding-right: 1%;
-	background-color: #0B132B;
+.container-fluid {
 	height: 94vh;
+}
+
+/* * {
+	background-color: #0B132B;
 } */
 
 h1 {
 	color: white;
 }
 
-/* .main>.row {
-	height: 100%;
-} */
+hr {
+	color: white;
+}
 
-.bg-custom1 {
+.bg-custom {
 	background-color: #1C2541;
 }
 
@@ -26,57 +22,9 @@ h1 {
 	background-color: #0B132B;
 }
 
-.sideBar {
-	display: flex;
-	flex-direction: column;
-	/* justify-content: space-around; */
-	align-items: center;
-
-	background-color: #0B132B;
-	/* height: 60%; */
-	width: 100%;
-	color: white;
-}
-
-.sideBar>button {
-	margin-bottom: 2rem;
-}
-
-.main {
-
-	display: flex;
-	flex-direction: row;
-	background-color: #0B132B;
-	height: 94vh;
-}
-
-/* .main>.row {
-	height: 100%;
-} */
-
-.bg-custom {
-	background-color: #1C2541;
-}
-
-/* .sideBar>button {
-	margin-bottom: 1rem;
-} */
-
-.folderContent {
-	display: flex;
-	flex-direction: column;
-	background-color: white;
-	color: black;
-
-}
-
-hr {
-	color: white;
-}
-
 .btn {
 	text-align: left;
-	font-size: 0.9rem;
+	font-size: 1rem;
 	width: 100%;
 	background-color: white;
 	color: #0B132B;
@@ -85,4 +33,32 @@ hr {
 .btn>fa-icon {
 	padding-left: 0.5rem;
 	padding-right: 0.5rem;
+}
+
+.options>button {
+	margin-bottom: 2rem;
+}
+
+.header {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+
+.search {
+	display: flex;
+	align-items: center;
+	width: 25rem;
+}
+
+.search>button {
+	font-size: 0.8rem;
+	width: 30%;
+	text-align: center;
+}
+
+.search>input {
+	text-align: center;
+	font-size: 0.8rem;
+	margin-right: 1rem;
 }
