--- a/src/app/codeverse/pages/project-explorer/project-explorer.component.css
+++ b/src/app/codeverse/pages/project-explorer/project-explorer.component.css
@@ -14,6 +14,10 @@ hr {
 	background-color: #1C2541;
 }
 
+.bg-custom1 {
+	background-color: #3A506B;
+}
+
 .bg-custom2 {
 	background-color: #0B132B;
 }
