Implementacion de estilos

--- a/src/app/codeverse/pages/project-explorer/project-explorer.component.html
+++ b/src/app/codeverse/pages/project-explorer/project-explorer.component.html
@@ -37,10 +37,10 @@
 			<hr>
 
 			<div class="table-responsive">
-				<table class="table table-bordered table-light table-hover table-stripped">
+				<table class="table table-bordered table-light table-hover table-stripped align-middle">
 					<thead>
 						<tr>
-							<th>#</th>
+							<th class="text-center"> <input type="checkbox"> </th>
 							<th>Nombre</th>
 							<th>Descripción</th>
 							<th>Tipo</th>
@@ -49,14 +49,14 @@
 						</tr>
 					</thead>
 					<tbody>
-
 						<tr *ngFor="let d of data">
-							<td>{{ d.id }}</td>
-							<td>{{ d.name }}</td>
-							<td>{{ d.description }}</td>
-							<td>{{ d.type }}</td>
-							<td>{{ d.createdAt }}</td>
-							<td>{{ d.modifiedAt }}</td>
+							<td class="text-center"> <input type="checkbox"> </td>
+							<td routerLink="/">{{ d.name }}</td>
+							<td routerLink="/">{{ d.description }}</td>
+							<td routerLink="/">{{ d.type }}</td>
+							<td routerLink="/">{{ d.createdAt }}</td>
+							<td routerLink="/">{{ d.modifiedAt }}</td>
+
 						</tr>
 
 					</tbody>
