Implementacion de navbar dinámica según vista

--- a/src/app/public/pages/landing/landing.component.html
+++ b/src/app/public/pages/landing/landing.component.html
@@ -1,4 +1,4 @@
-<app-navbar></app-navbar>
+<app-navbar [isLanding]="isLanding"></app-navbar>
 
 <div class="scrollspy rounded-2 vh-100" data-bs-spy="scroll" data-bs-target="#navbar"
 	data-bs-root-margin="0px 0px 0px 0px" data-bs-smooth-scroll="true" tabindex="0">
