--- a/src/app/codeverse/pages/project-workspace/project-workspace.component.css
+++ b/src/app/codeverse/pages/project-workspace/project-workspace.component.css
@@ -10,6 +10,10 @@ hr {
 	color: white;
 }
 
+.whiteText {
+	color: white;
+}
+
 .bg-custom {
 	background-color: #1C2541;
 }
@@ -39,14 +43,71 @@ hr {
 	margin-bottom: 2rem;
 }
 
-.editors{
+.editors {
 	display: flex;
 	height: 100%;
 	flex-direction: column;
 }
 
-.editors > *{
+.editors>* {
 	padding-top: 0.5rem;
 	padding-bottom: 0.5rem;
+	height: 100%;
+}
+
+.renderZone {
+	/* display: flex;
+	flex-direction: column;
+	justify-content: space-evenly; */
+	/* margin-top: 1%; */
+	padding: 0.5rem;
+	height: 100%;
+}
+
+.window {
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+	background-color: #1C2541;
+	padding: 0.5rem;
+	border-width: 1px;
+	border-style: solid;
+	border-color: #1C2541;
+	border-radius: 15px 15px 0px 0px;
+}
+
+.header {
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-end;
+	background-color: #1C2541;
+	border-bottom-width: 0.15rem;
+	border-bottom-style: solid;
+	border-bottom-color: #000000;
+	font-size: 1rem;
+	height: 2rem;
+}
+
+.btn-header {
+	padding-left: 0.5rem;
+	padding-right: 0.5rem;
+	border-width: 1px;
+	border-style: solid;
+	border-color: #3A506B;
+	border-radius: 15px 15px 0px 0px;
+
+	text-align: left;
+	font-size: 1rem;
+	color: white;
+	background-color: #3A506B;
+}
+
+.iframeZone {
+	margin-top: 1%;
+	height: 100%;
+}
+
+iframe {
+	width: 100%;
 	height: 100%;
 }
