--- a/src/app/codeverse/pages/project-workspace/project-workspace.component.html
+++ b/src/app/codeverse/pages/project-workspace/project-workspace.component.html
@@ -4,7 +4,7 @@
 
 	<div class="row h-100">
 
-		<div class="col-sm-12 col-md-6 col-lg-6 pt-3 pb-3 bg-custom1">
+		<div class="col-sm-12 col-md-6 col-lg-6 pt-3 pb-3 pe-1 bg-custom1">
 
 			<div class="editors">
 				<app-editor></app-editor>
@@ -14,10 +14,35 @@
 
 		</div>
 
-		<div class="col-sm-12 col-md-6 col-lg-6 pt-3 pb-3 bg-custom1">
-			asdf
+		<div class="col-sm-12 col-md-6 col-lg-6 pt-3 pb-3 ps-1 bg-custom1">
+
+			<div class="renderZone bg-custom1">
+
+				<div class="window bg-custom">
+
+					<div class="header  whiteText">
+
+						<div class="btn-header">
+							Aqui va la pestaña
+						</div>
+
+					</div>
+
+					<div class="iframeZone">
+
+						<iframe class="bg-light">
+
+						</iframe>
+
+					</div>
+
+				</div>
+
+			</div>
+
 		</div>
 
 	</div>
 
 </div>
+
