Implementación de botones

--- a/src/app/codeverse/components/editor/editor.component.html
+++ b/src/app/codeverse/components/editor/editor.component.html
@@ -4,8 +4,7 @@
 		<button class="btn-header file">{{file}}</button>
 
 		<div class="actions">
-			<button class="btn-header">^</button>
-			<button class="btn-header">X</button>
+			<button class="btn-header"><fa-icon [icon]="faChevronUp"></fa-icon></button>
 		</div>
 
 	</div>
