--- a/src/app/codeverse/pages/project-workspace/project-workspace.component.html
+++ b/src/app/codeverse/pages/project-workspace/project-workspace.component.html
@@ -26,6 +26,8 @@
 							Aqui va la pestaña
 						</div>
 
+						<button class="btn-header"><fa-icon [icon]="faChevronUp"></fa-icon></button>
+
 					</div>
 
 					<div class="iframeZone">
