--- a/src/app/codeverse/pages/project-explorer/project-explorer.component.html
+++ b/src/app/codeverse/pages/project-explorer/project-explorer.component.html
@@ -26,7 +26,8 @@
 		<div class="col-sm-12 col-md-8 col-lg-10 p-4 bg-custom1">
 
 			<div class="header" role="search">
-				<h1>Título de carpeta</h1>
+
+				<h1>{{ data[0].name }}</h1>
 
 				<div class="search">
 					<input class="btn" type="search" placeholder="Search" aria-label="Search">
@@ -43,21 +44,35 @@
 							<th class="text-center"> <input type="checkbox"> </th>
 							<th>Nombre</th>
 							<th>Descripción</th>
-							<th>Tipo</th>
 							<th>Creado</th>
 							<th>Modificado</th>
 						</tr>
 					</thead>
 					<tbody>
-						<tr *ngFor="let d of data">
-							<td class="text-center"> <input type="checkbox"> </td>
-							<td routerLink="/">{{ d.name }}</td>
-							<td routerLink="/">{{ d.description }}</td>
-							<td routerLink="/">{{ d.type }}</td>
-							<td routerLink="/">{{ d.createdAt }}</td>
-							<td routerLink="/">{{ d.modifiedAt }}</td>
 
-						</tr>
+						<ng-container *ngFor="let d of data">
+
+							<tr *ngFor="let folder of d.folders">
+
+								<td class="text-center"> <input type="checkbox"> </td>
+								<td routerLink="/">{{ folder.name }}</td>
+								<td routerLink="/">{{ folder.description }}</td>
+								<td routerLink="/">{{ folder.createdAt }}</td>
+								<td routerLink="/">{{ folder.modifiedAt }}</td>
+
+							</tr>
+
+							<tr *ngFor="let project of d.projects">
+
+								<td class="text-center"> <input type="checkbox"> </td>
+								<td routerLink="/">{{ project.name }}</td>
+								<td routerLink="/">{{ project.description }}</td>
+								<td routerLink="/">{{ project.createdAt }}</td>
+								<td routerLink="/">{{ project.modifiedAt }}</td>
+
+							</tr>
+
+						</ng-container>
 
 					</tbody>
 				</table>
