--- a/src/app/codeverse/components/editor/editor.component.html
+++ b/src/app/codeverse/components/editor/editor.component.html
@@ -4,9 +4,8 @@
 		<button class="btn-header file">{{file}}</button>
 
 		<div class="actions">
-			<button class="btn-header"><fa-icon [icon]="faChevronUp"></fa-icon></button>
+			<button class="btn-header" (click)="foldEvent.emit()"><fa-icon [icon]="faChevronUp"></fa-icon></button>
 		</div>
-
 	</div>
 
 	<div class="editor">
