--- a/src/app/codeverse/pages/project-workspace/project-workspace.component.css
+++ b/src/app/codeverse/pages/project-workspace/project-workspace.component.css
@@ -56,11 +56,8 @@ hr {
 }
 
 .renderZone {
-	/* display: flex;
-	flex-direction: column;
-	justify-content: space-evenly; */
-	/* margin-top: 1%; */
-	padding: 0.5rem;
+	padding-top: 0.5rem;
+	padding-bottom: 0.5rem;
 	height: 100%;
 }
 
