--- a/src/app/codeverse/pages/project-workspace/project-workspace.component.html
+++ b/src/app/codeverse/pages/project-workspace/project-workspace.component.html
@@ -4,17 +4,22 @@
 
 	<div class="row h-100">
 
-		<div class="col-sm-12 col-md-6 col-lg-6 pt-3 pb-3 pe-1 bg-custom1">
+		<div class="col-sm-12 col-md-6 col-lg-6 pt-3 pb-3 bg-custom1">
 
 			<div class="editors">
-				<app-editor></app-editor>
-				<app-editor></app-editor>
-				<app-editor></app-editor>
+
+				<app-editor file="HTML" (foldEvent)="foldEditor('HTML')" *ngIf="!htmlHidden">
+				</app-editor>
+				<app-editor file="CSS" (foldEvent)="foldEditor('CSS')" *ngIf="!cssHidden">
+				</app-editor>
+				<app-editor file="JS" (foldEvent)="foldEditor('JS')" *ngIf="!jsHidden">
+				</app-editor>
+
 			</div>
 
 		</div>
 
-		<div class="col-sm-12 col-md-6 col-lg-6 pt-3 pb-3 ps-1 bg-custom1">
+		<div class="col-sm-12 col-md-6 col-lg-6 pt-3 pb-3 bg-custom1">
 
 			<div class="renderZone bg-custom1">
 
@@ -46,5 +51,22 @@
 
 	</div>
 
-</div>
+	<div class="row">
 
+		<div class="windowMinimizedContainer">
+
+			<div class="header">
+
+				<!-- <button class="btn-header file">{{file}}</button> -->
+
+				<!-- <div class="actions">
+					<button class="btn-header" (click)="foldEvent.emit()"><fa-icon [icon]="faChevronUp"></fa-icon></button>
+				</div> -->
+
+			</div>
+
+		</div>
+
+	</div>
+
+</div>
