--- a/src/app/codeverse/pages/project-workspace/project-workspace.component.html
+++ b/src/app/codeverse/pages/project-workspace/project-workspace.component.html
@@ -4,7 +4,7 @@
 
 	<div [ngClass]="{'row': true, 'row1': areEditorsHidden, 'h-100': !areEditorsHidden}">
 
-		<div class="col-sm-12 col-md-6 col-lg-6 pt-3 bg-custom1">
+		<div class="col-sm-12 col-md-6 col-lg-6 pt-3 pb-3 bg-custom1">
 
 			<div class="editors">
 
@@ -19,7 +19,7 @@
 
 		</div>
 
-		<div class="col-sm-12 col-md-6 col-lg-6 pt-3 bg-custom1">
+		<div class="col-sm-12 col-md-6 col-lg-6 pt-3 pb-3 bg-custom1">
 
 			<div class="renderZone bg-custom1">
 
@@ -51,7 +51,7 @@
 
 	</div>
 
-	<div class="row row2 bg-custom1 pt-3 pb-3" *ngIf="areEditorsHidden === true">
+	<div class="row row2 bg-custom1 pb-3" *ngIf="areEditorsHidden === true">
 
 		<div class="window-minimized-container">
 
