- Implemenacion de carga de contenido de archivo desde archivo estatico. - Implementacion de guardado de contenido de archivo desde variable de componente

--- a/src/app/codeverse/components/editor/editor.component.html
+++ b/src/app/codeverse/components/editor/editor.component.html
@@ -9,9 +9,7 @@
 	</div>
 
 	<div class="editor">
-		<textarea>
-
-		</textarea>
+		<textarea [(ngModel)]="code" (ngModelChange)="textareaValueChange()"></textarea>
 	</div>
 
 </div>
