--- a/src/app/codeverse/pages/project-workspace/project-workspace.component.html
+++ b/src/app/codeverse/pages/project-workspace/project-workspace.component.html
@@ -34,7 +34,7 @@
 							{{ projectDetail.name }}
 						</div>
 
-						<button class="btn-header"><fa-icon [icon]="faChevronUp"></fa-icon></button>
+						<div class="btn-header"><fa-icon [icon]="faChevronUp"></fa-icon></div>
 
 					</div>
 
