Implementación de renderizado de html, css y js en iframe

--- a/src/app/codeverse/components/iframe/iframe.component.html
+++ b/src/app/codeverse/components/iframe/iframe.component.html
@@ -14,7 +14,7 @@
 
 		<div class="iframeZone">
 
-			<iframe class="bg-light">
+			<iframe class="bg-light" [srcdoc]="sanitizedCode">
 
 			</iframe>
 
