--- a/src/app/codeverse/pages/project-workspace/project-workspace.component.html
+++ b/src/app/codeverse/pages/project-workspace/project-workspace.component.html
@@ -24,7 +24,7 @@
 
 		<div class="col-sm-12 col-md-6 col-lg-6 pt-3 pb-3 bg-custom1">
 
-			<app-iframe [title]="projectTitle"></app-iframe>
+			<app-iframe [title]="projectTitle" [code]="iframeCode"></app-iframe>
 
 		</div>
 
