--- a/src/app/codeverse/pages/project-explorer/project-explorer.component.html
+++ b/src/app/codeverse/pages/project-explorer/project-explorer.component.html
@@ -7,14 +7,21 @@
 		<div class="col-sm-12 col-md-4 col-lg-2 p-4 bg-custom2">
 
 			<div class="options">
+
 				<button class="btn">
-					<fa-icon [icon]="faFolderPlus"></fa-icon>Proyecto Nuevo
+					<fa-icon [icon]="faArrowUp"></fa-icon>Ir Arriba
 				</button>
 				<button class="btn">
-					<fa-icon [icon]="faFolderTree"></fa-icon>Carpetas
+					<fa-icon [icon]="faFolderPlus"></fa-icon>Nueva Carpeta
 				</button>
 				<button class="btn">
-					<fa-icon [icon]="faStar"></fa-icon>Favoritos
+					<fa-icon [icon]="faFileCode"></fa-icon>Nuevo Proyecto
+				</button>
+				<button class="btn">
+					<fa-icon [icon]="faFolderTree"></fa-icon>Solo Carpetas
+				</button>
+				<button class="btn">
+					<fa-icon [icon]="faCode"></fa-icon>Solo Proyectos
 				</button>
 				<button class="btn">
 					<fa-icon [icon]="faShareNodes"></fa-icon>Proyectos Compartidos
@@ -41,7 +48,7 @@
 				<table class="table table-bordered table-light table-hover table-stripped align-middle">
 					<thead>
 						<tr>
-							<th class="text-center"> <input type="checkbox"> </th>
+							<th></th>
 							<th>Nombre</th>
 							<th>Descripción</th>
 							<th>Creado</th>
@@ -52,23 +59,23 @@
 
 						<ng-container *ngFor="let d of data">
 
-							<tr *ngFor="let folder of d.folders">
+							<tr *ngFor="let folder of d.folders" routerLink="/">
 
 								<td class="text-center"> <input type="checkbox"> </td>
-								<td routerLink="/">{{ folder.name }}</td>
-								<td routerLink="/">{{ folder.description }}</td>
-								<td routerLink="/">{{ folder.createdAt }}</td>
-								<td routerLink="/">{{ folder.modifiedAt }}</td>
+								<td>{{ folder.name }}</td>
+								<td>{{ folder.description }}</td>
+								<td>{{ folder.createdAt }}</td>
+								<td>{{ folder.modifiedAt }}</td>
 
 							</tr>
 
-							<tr *ngFor="let project of d.projects">
+							<tr *ngFor="let project of d.projects" routerLink="/">
 
-								<td class="text-center"> <input type="checkbox"> </td>
-								<td routerLink="/">{{ project.name }}</td>
-								<td routerLink="/">{{ project.description }}</td>
-								<td routerLink="/">{{ project.createdAt }}</td>
-								<td routerLink="/">{{ project.modifiedAt }}</td>
+								<td class="text-center"> <input type="checkbox"></td>
+								<td>{{ project.name }}</td>
+								<td>{{ project.description }}</td>
+								<td>{{ project.createdAt }}</td>
+								<td>{{ project.modifiedAt }}</td>
 
 							</tr>
 
