--- a/src/app/codeverse/pages/project-explorer/project-explorer.component.html
+++ b/src/app/codeverse/pages/project-explorer/project-explorer.component.html
@@ -35,7 +35,7 @@
 
 			<div class="header" role="search">
 
-				<h1>{{ rootFolder.name }}</h1>
+				<h1>{{ folder.name }}</h1>
 
 				<div class="search">
 					<input class="btn" type="search" placeholder="Search" aria-label="Search">
@@ -58,7 +58,7 @@
 					</thead>
 					<tbody>
 
-						<tr *ngFor="let folder of rootFolder.folders">
+						<tr *ngFor="let folder of folder.folders">
 
 							<td class="text-center"> <input type="checkbox"> </td>
 							<td routerLink="/">{{ folder.name }}</td>
@@ -68,7 +68,7 @@
 
 						</tr>
 
-						<tr *ngFor="let project of rootFolder.projects">
+						<tr *ngFor="let project of folder.projects">
 
 							<td class="text-center"> <input type="checkbox"></td>
 							<td routerLink="/">{{ project.name }}</td>
